  - Generate minimal Data Document based on changes (per TX possible, runs async so not really; from existing doc, like current ES doc)
  - Update database from Data Document
  - Data Document UI
    - show/edit field, rel alias, condition, link
    - special form for add (edit?) field with 5 drop-downs for relationships, one for field, all updated based on master entity and previous selections

- Atomikos
  - http://www.atomikos.com/Main/InstallingTransactionsEssentials
  - http://mvnrepository.com/artifact/com.atomikos
- Bitronix
  - https://github.com/bitronix/btm
  - http://mvnrepository.com/artifact/org.codehaus.btm

- Email verification by random code on registration and email change
- Login through Google, Facebook, etc
  - OpenID, SAML, OAuth, ...
  - https://developers.facebook.com/docs/facebook-login/login-flow-for-web/v2.0

- Workflow that manages activity flow with screens and services attached to
  activities, and tasks based on them taking users to defined or automatic
  screen; see BonitaSoft.com Open Source BPM for similar concept; generally
  workflow without requiring implementation of an entire app once the
  workflow itself is defined

- Interesting JS plugins
  - http://arshaw.com/fullcalendar/
  - http://www.datatables.net
  - http://www.datatables.net/examples/data_sources/server_side.html
  - http://code.google.com/p/jquery-datatables-editable/
  - http://code.drewwilson.com/entry/autosuggest-jquery-plugin

- User Notification
  - WebSocket clients: track userId, notificationName, connectionKey
    - Entity (no, keep in memory): VisitClient - visitId*, userId*, topic*, connectionKey*
    - when sending out WebSocket messages lookup all active Visits for userId and send to each connectionKey
    - API (with at least an example transition) for WebSocket client registry; set connectionKey on current Visit
    - use Camel WebSocket? jWebSocket? (how to send message to client connection key)