@@ -569,6 +569,8 @@ public class ResourceFacadeImpl implements ResourceFacade {
         if (contentType == "application/rtf") return false
         if (contentType.startsWith("application/xml")) return false
         if (contentType.endsWith("+xml")) return false
+        if (contentType.startsWith("application/yaml")) return false
+        if (contentType.endsWith("+yaml")) return false
         return true
     }
 
