@@ -151,5 +151,11 @@ along with this software (see the LICENSE.md file). If not, see
         <default-response type="none"/>
     </transition>
 
+    <transition name="schema.raml" read-only="true" method="get">
+        <actions><script>ec.web.handleEntityRestRaml(sri.screenUrlInfo.extraPathNameList,
+                sri.buildUrl("v1").getUrl(), sri.buildUrl("schema").getUrl())</script></actions>
+        <default-response type="none"/>
+    </transition>
+
     <widgets><!-- this should never be viewed... --></widgets>
 </screen>
